--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.12.1",
     "node-sass": "^6.0.0",
+    "sass-loader": "^10.2.0",
     "vue": "^2.6.11",
     "vue-cli-plugin-pug": "^2.0.0"
   },
